--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Pathweaver - Interactive AI Storytelling</title>
     <meta name="description" content="Create dynamic, interactive adventures powered by AI">
     
-    <!-- Simple favicon using emoji -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎭</text></svg>">
+    <!-- Ethereal orb favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   </head>
   <body>
     <div id="root"></div>
